Fixed stuff going out of viewport

--- a/styles.css
+++ b/styles.css
@@ -166,35 +166,36 @@ body>div:hover {
 	box-shadow: rgba(0, 0, 0, 0.1) 11px 10px 6px -3px;
 }
 
-body>div::before, body>div::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background-color: var(--bg-complementary);
-  transform: scaleY(0);
-  transition: transform 0.5s ease;
+body>div::before,
+body>div::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 2px;
+	background-color: var(--bg-complementary);
+	transform: scaleY(0);
+	transition: transform 0.5s ease;
 }
 
 body>div::before {
-  left: -8px;
-  transform-origin: center top;
+	left: -8px;
+	transform-origin: center top;
 }
 
 body>div:hover::before {
-  transform-origin: center bottom;
-  transform: scaleY(1);
+	transform-origin: center bottom;
+	transform: scaleY(1);
 }
 
 body>div::after {
-  right: -8px;
-  transform-origin: center bottom;
+	right: -8px;
+	transform-origin: center bottom;
 }
 
 body>div:hover::after {
-  transform-origin: center top;
-  transform: scaleY(1);
+	transform-origin: center top;
+	transform: scaleY(1);
 }
 
 #profilePhoto {
@@ -206,8 +207,8 @@ body>div:hover::after {
 	grid-column: 1;
 	grid-row: 1 / span 2;
 	min-height: 300px;
+	width: 98%;
 }
-
 
 @media screen and (max-width: 600px) {
 	body {
